# kmemsnoop

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: cargo-test-kexpr.yml  cargo-test.yml
bpf/: kmemsnoop.bpf.c  memwatch.bpf.c  msg.h  utils.h
bpf/.output/: memwatch.skel.rs
scripts/: cross_compile.sh  install-git-hooks  pre-commit.hook
src/: bpf.rs  bump_memlock_rlimit.rs  ioctl.rs  kexpr.rs  ksym.rs  lexer.rs  main.rs  perf.rs  utils.rs
src/msg/: data.rs  mod.rs  stack.rs
tests/: kexpr.py
tools/: busdev.py  busdrv.py  irq.py  pciutil.py  struct_off.py  task.py
