[package]
name = "kmemsnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drgn-knight = { path = "./drgn-knight" }
anyhow = "1.0.82"
ctrlc = "3.1"
libc = "0.2.154"
libbpf-rs = "0.23.0"
perf-event-open-sys2 = "5.0.3"
plain = "0.2.3"
blazesym = "0.2.0-alpha.12"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.82"
libbpf-cargo = "0.23.0"
