[package]
name = "kmemsnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drgn-knight = { path = "./drgn-knight", optional = true }
anyhow = "1.0.82"
ctrlc = "3.1"
libc = "0.2.154"
libbpf-rs = "0.24.8"
perf-event-open-sys2 = "5.0.3"
plain = "0.2.3"
blazesym = "0.2.0-alpha.12"
clap = { version = "4.5.4", features = ["derive"] }
sudo = "0.6.0"
lazy_static = "1.5.0"

[build-dependencies]
anyhow = "1.0.82"
libbpf-cargo = "0.24.8"

[features]
default = ["kexpr"]
kexpr = ["dep:drgn-knight"]
